Fix footer layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-footer a {
-  padding-right: 2.9em;
-  padding-left: 0.2em;
-}
-
 footer {
   border-top: 1px solid #efefef;
 }
